# Aha_Project

./: .gitignore  00_intro.ipynb  11_yolov8_fast_2_classes_finetuning_optimized.ipynb  README.md  pyproject.toml
